--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,17 @@ code {
   background-color: #521751;
   color: white;
   cursor: pointer;
+  min-width: 150px;
+}
+
+.DimationsButton {
+  border: 1px solid #521751;
+  font: inherit;
+  padding: 8px;
+  background-color: #1e337e;
+  color: white;
+  cursor: pointer;
+  margin-bottom: 10px;
 }
 
 .Button:hover,
