--- a/src/index.css
+++ b/src/index.css
@@ -19,20 +19,20 @@ code {
   background-color: #521751;
   color: white;
   cursor: pointer;
-  min-width: 150px;
+  min-width: 210px;
 }
 
-.DimationsButton {
+.DimensionsButton {
   border: 1px solid #521751;
   font: inherit;
   padding: 8px;
   background-color: #1e337e;
   color: white;
   cursor: pointer;
-  margin-bottom: 10px;
+  margin-bottom: 18px;
 }
 
 .Button:hover,
 .Button:active {
-  background-color: #fa923f;
+  background-color: #115b4a;
 }
